--- a/youtubehelper/build.gradle
+++ b/youtubehelper/build.gradle
@@ -23,6 +23,7 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'bintray-release'
 
 android {
     compileSdkVersion 21
@@ -45,4 +46,11 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'org.jsoup:jsoup:1.8.1'
+}
+
+publish {
+    userOrg = 'rebus007'
+    groupId = 'rebus'
+    artifactId = 'YouTubeHelper'
+    version = '1.0.0'
 }
