--- a/build.gradle
+++ b/build.gradle
@@ -31,13 +31,14 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:1.0.0'
         classpath 'com.novoda:bintray-release:0.2.7'
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+        maven {
+            url 'http://dl.bintray.com/raphaelbussa/maven'
+        }
     }
 }
